# llm-jp-vllm

./: README.md  checks.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml  release_test.yml
llm_jp_vllm/: __init__.py  llmjp4_reasoning_parser.py
llm_jp_vllm/llm_jp_4/: __init__.py  reasoning_parser.py
llm_jp_vllm/llmjp4/: __init__.py  harmony.py  reasoning_parser.py
