[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "llm-jp-vllm"
description = "vLLM plugins for LLM-jp models"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache Software License 2.0"}
authors = [
    {name = "Yusuke Oda", email = "odashi@predicate.jp"},
]
keywords = [
    "llm",
    "llm-jp",
    "transformers",
    "vllm",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "vllm>=0.18.0",
]
dynamic = [
    "version"
]

[dependency-groups]
dev = [
    "mypy>=1.6.1",
    "pytest>=7.4.3",
    "ruff>=0.15.12",
]

[project.urls]
Homepage = "https://github.com/llm-jp/llm-jp-vllm"
"Bug Tracker" = "https://github.com/llm-jp/llm-jp-vllm/issues"

[tool.hatch.build]
include = [
    "*.py",
    "py.typed",
]
exclude = [
    "*_test.py",
]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["llm_jp_vllm"]

[tool.hatch.version]
path = "llm_jp_vllm/_version.py"

[tool.ruff]
target-version = "py312"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
